finalr version, adding clean notebook

--- a/Customer_classification_clean.ipynb
+++ b/Customer_classification_clean.ipynb
@@ -393,6 +393,7 @@
     }
    ],
    "source": [
+    "# see aditional information\n",
     "data.info()"
    ]
   },
@@ -7377,13 +7378,6 @@
    "source": [
     "## So by the end of this project we created machine learning models to predict if the customer will accept term deposit or not. The best performance showed Nueral Network and Random Forest algorithms, with 95% and 96% respectively"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
